# yew-address-book-client

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.local.yml  docker-compose.prod.yml  index.html  package.json  rust-toolchain.toml  trunk.toml  webpack.config.js
.github/workflows/: ci_action.yml  docker_action.yml
config/: default.yaml  development.yaml  local.yml  production.yaml  staging.yaml
server/: index.js  package-lock.json  package.json  routes.js
src/: app.rs  error.rs  lib.rs  main.rs  routes.rs
src/components/: dashboard.rs  mod.rs  page_not_found.rs
src/components/hello_world/: hello_world_component.rs
src/layout/: footer.rs  header.rs
src/modules/: dashboard.rs  hello_world.rs  login.rs  mod.rs  page_not_found.rs  signup.rs
src/pages/: dashboard.rs  hello_world.rs  mod.rs  page_not_found.rs
src/pages/dashboard/: dashboard_component.rs  mod.rs
src/pages/hello_world/: hello_world_component.rs  mod.rs
src/pages/page_not_found/: mod.rs  page_not_found_component.rs
src/shared/: constraint.rs  mod.rs  model.rs
src/shared/layout/: footer.rs  header.rs  mod.rs
static/: index.html  style.scss
static/common/: color.scss
