[package]
name = "yew-address-book-client"
version = "0.1.0"
authors = ["Hai Phan <bahaimt@gmail.com>"]
edition = "2021"

[dependencies]
weblog = "0.3.0"
console_error_panic_hook = "0.1.7"
strum = "0.23.0"
strum_macros = "0.23.1"
serde = { version = "1.0.136", features = ["derive"] }
wasm-bindgen = "0.2.70"
wasm-logger = "0.2.0"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.19.3"
yew-router = "0.16.0"
yew-hooks = "0.1.25"
anyhow = "1.0.53"
reqwasm = "0.4.0"
chrono = "0.4.19"

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'KeyboardEvent',
]
