[package]
name = "yew-address-book-client"
version = "0.1.0"
authors = ["Hai Phan <bahaimt@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.17"
weblog = "0.3.0"
console_error_panic_hook = "0.1.7"
strum = "0.24.1"
strum_macros = "0.24.3"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.20.0"
yew-router = "0.17.0"
yew-hooks = "0.2.0"
anyhow = "1.0.68"
gloo-net = "0.2.5"
chrono = "0.4.23"
derive_more = "0.99.17"
base64 = "0.20.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'HtmlInputElement', 'Crypto', 'CryptoKey', 'SubtleCrypto'
]
